WIP 1.21 porting